prod/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: api.holamind.xyz
      http:
        paths:
          - backend:
              serviceName: django-service
              servicePort: 8000
    - host: flower.holamind.xyz
      http:
        paths:
          - path:
            backend:
              serviceName: flower-service
              servicePort: 5555
